--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,18 +2,29 @@
  @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,400&family=Poppins&display=swap');
 *{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+    --primary-color: #008127;
+    --font-title: 'Monteserrat'
+    --font-default
 }
 header {
     height: 100vh;
     position: relative;
+    align-items: flex-start;
+    gap: 1rem;
     padding-left: 6.8rem;
     padding-top: 16.8rem;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
  /* pseudo-elemento */
   header::before {
     content: '';
-background-image: url('../imagens/imagem.jpg'); 
+background-image: url('../imagens/Fazenda.jpg'); 
 background-size: cover;
 height: 100%;
 width: 100%;
@@ -27,23 +38,49 @@ h1{
     color:#FFF ;
     text-shadow: 4px 4px 2px rgba( 0, 0, 0, 0.25);
     font-size: 4rem; 
-    font-family: 'Montserrat';
+    font-family: var(--font-title);
 
 
 }
 span {
-    color: #8A95FE;
-    text-shadow: 4px 4px 2px rgba( 0, 0, 0, 0.25);
-    font-size: 2rem; ;
+    color: #008127;
+    text-shadow: 3px 3px 2px rgba( 0, 0, 0, 0.25);
+    font-size: 3rem; ;
     font-family: 'Montserrat';
 
 }
 
 .botao{
-    background-color: #8A95FE;
-    color: #FFF;
+    background-color: var(--primary-color);
+    color: rgb(8, 8, 8);
     font-family: 'Courier New', Courier, monospace;
-    padding: .25rem 1rem;
+    padding: .25rem 1.1rem;
     border-radius: 4px;
     text-decoration: none;
+    width: 10rem;
+    transition: opacity  1s;
+}
+.botao:hover{
+    opacity: .5;
+}
+#secao-apresentacao{
+    display: flex;
+    height: 50vh;
+padding: 6rem;
+gap: 2rem;
+
+}
+#secao-apresentacao img{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+
+}
+#secao-apresentacao div{
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 60%;
+
 }
